# Driftdb

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DOCS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  security_test.py
.cargo/: config.toml
.github/workflows/: workflow.yml
clients/python/: README.md  pyproject.toml
clients/python/driftdb/: __init__.py  client.py
clients/python/driftdb.egg-info/: PKG-INFO  SOURCES.txt
clients/python/driftdb_ai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
driftdb-core/: Cargo.toml
driftdb-core/src/: compression.rs  error.rs  event.rs  heap.rs  lib.rs  ops.rs  security.rs  storage.rs  sync.rs  temporal.rs  transaction.rs  types.rs  wal.rs
driftdb-graph/: Cargo.toml
driftdb-graph/src/: edge.rs  lib.rs  node.rs  pattern.rs  traverse.rs
driftdb-query/: Cargo.toml
driftdb-query/src/: ast.rs  executor.rs  lexer.rs  lib.rs  parser.rs
driftdb-server/: Cargo.toml
driftdb-server/src/: bench.rs  heap_bench.rs  main.rs  repl.rs  rest_api.rs  ws_server.rs
driftdb-server/static/: app.js  index.html  style.css
driftdb-vector/: Cargo.toml
driftdb-vector/src/: index.rs  lib.rs  similarity.rs  store.rs
